# smart-car

edgeboard/: build.sh
edgeboard/res/calibration/: 文件说明.txt
edgeboard/res/calibration/valid/: assessment.txt  calibration.xml
edgeboard/res/model/yolov3_mobilenet_v1/: deploy_paddle.ro  io_paddle.json  label_list.txt  nms.tar  post.onnx
edgeboard/src/: CMakeLists.txt
edgeboard/src/config/: config.json  config.old  config_ppncnms.json  config_ppncnna.json
edgeboard/src/include/: common.hpp  detection.hpp  json.hpp  uart.hpp
edgeboard/src/src/: FuzzyPID.cpp  controlcenter.cpp  icar.cpp  icar3.cpp  mapping.cpp  motion.cpp  preprocess.cpp
edgeboard/src/src/detection/: bridge.cpp  danger.cpp  parking.cpp  racing.cpp  rescue.cpp
edgeboard/src/src/recognition/: crossroad.cpp  ring.cpp  tracking.cpp
edgeboard/src/tool/: calibration.cpp  camera.cpp  collection.cpp  img2video.cpp
opencv/: CMakeLists.txt  opencv.cpp
